# heropen

./: README.md  entities.example.json  install.ps1  install.sh  pyproject.toml
src/heropen/: __init__.py  auto_mcp.py  auto_setup.py  cli.py  cli_commands.py  core.py  core.py.bak  heropen_auto_setup.pth  install.py  mcp_server.py  panel.py  telemetry_ping.py  viewer.html  viewer_server.py
src/heropen/skills/: file_search.py
