[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "heropen"
version = "1.4.6"
description = "HeroPen — AI Agent Long-term Memory System"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "KSMN Studio", email = "hello@ksmn.cc"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
embedding = [
    "fastembed>=0.6",
]
ui = [
    "rich>=13.0",
]
all = [
    "heropen[embedding]",
    "heropen[ui]",
    "mcp>=1.6",
]

[project.scripts]
heropen = "heropen.cli:main"
heropen-mcp = "heropen.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/heropen"]

[project.urls]
Homepage = "https://ksmn.cc/heropen"
Documentation = "https://ksmn.cc/heropen/docs"
Repository = "https://github.com/Koradji77/heropen"
